# tech-task

./: .gitignore  RUN.md
Renewable/: README.md  databricks.yml  pyproject.toml  pytest_databricks.py
Renewable/.databricks/: .databricks.env
Renewable/tests/: conftest.py  run_tests.py  test_bronze.py  test_gold.py  test_silver.py
Renewable/transformations/: _helpers.py  bronze.py  gold.py  silver.py
